Adding MudBlazor to the solution

--- a/MauiTest/Shared/MainLayout.razor
+++ b/MauiTest/Shared/MainLayout.razor
@@ -1,5 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+<link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+
+<MudThemeProvider/>
+<MudDialogProvider/>
+<MudSnackbarProvider/>
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -15,4 +22,3 @@
         </article>
     </main>
 </div>
-
