--- a/MauiTest/Pages/Counter.razor
+++ b/MauiTest/Pages/Counter.razor
@@ -6,6 +6,8 @@
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
+<MudAlert>Hello Here is a MudAlert</MudAlert>
+
 @code {
     private int currentCount = 0;
 
