--- a/MauiTest/Pages/Counter.razor
+++ b/MauiTest/Pages/Counter.razor
@@ -1,19 +1,33 @@
 ﻿@page "/counter"
 
-<h1>Counter</h1>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge">
+    
+    <h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+    <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+    <MudFab Color="Color.Primary" StartIcon="@Icons.Material.Filled.Add" @onclick="IncrementCount"></MudFab>
+    
+    @if (!hidden)
+    {
+        <MudAlert Severity="Severity.Info" Variant="Variant.Outlined" Elevation="5" Class="col-4" ContentAlignment="HorizontalAlignment.Center">Hello Here is a MudAlert</MudAlert>
+    }
+    
+</MudContainer>
 
-<MudAlert>Hello Here is a MudAlert</MudAlert>
 
 @code {
     private int currentCount = 0;
+    private bool hidden;
 
     private void IncrementCount()
     {
         currentCount++;
+        hidden = currentCount switch
+        {
+            10 => true,
+            >= 12 => false,
+            _ => hidden
+            };
     }
 }
-
