--- a/MauiTest/Shared/NavMenu.razor
+++ b/MauiTest/Shared/NavMenu.razor
@@ -1,40 +1,8 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">MauiTest</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
+﻿
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
-
+<MudAppBar Color="Color.Transparent" Fixed="false" Elevation="2">
+    <MudNavLink Match="NavLinkMatch.All" Href="/">Home</MudNavLink>
+    <MudNavLink Href="/Counter">Counter</MudNavLink>
+    <MudNavLink Href="/FetchData">Fetch Data</MudNavLink>
+    <MudIconButton Icon="@Icons.Custom.Brands.Apple" Color="Color.Inherit" Edge="Edge.End"></MudIconButton>
+</MudAppBar>
