--- a/MauiTest/Pages/Counter.razor
+++ b/MauiTest/Pages/Counter.razor
@@ -1,33 +1,41 @@
 ﻿@page "/counter"
 
-<MudContainer MaxWidth="MaxWidth.ExtraLarge">
-    
-    <h1>Counter</h1>
+<MudBreadcrumbs Items="_items"></MudBreadcrumbs>
 
-    <p role="status">Current count: @currentCount</p>
+@if (!_hidden)
+{
+    <MudAlert Severity="Severity.Info" Variant="Variant.Outlined" Elevation="5" Class="col-12" ContentAlignment="HorizontalAlignment.Center">Hello Here is a MudAlert</MudAlert>
+}
 
-    <MudFab Color="Color.Primary" StartIcon="@Icons.Material.Filled.Add" @onclick="IncrementCount"></MudFab>
-    
-    @if (!hidden)
-    {
-        <MudAlert Severity="Severity.Info" Variant="Variant.Outlined" Elevation="5" Class="col-4" ContentAlignment="HorizontalAlignment.Center">Hello Here is a MudAlert</MudAlert>
-    }
-    
-</MudContainer>
+<h1>Counter</h1>
 
+<p role="status">Current count: @_currentCount</p>
+
+<p><MudFab Color="Color.Primary" StartIcon="@Icons.Material.Filled.Add" @onclick="IncrementCount"></MudFab></p>
 
 @code {
-    private int currentCount = 0;
-    private bool hidden;
+    private int _currentCount;
+    private bool _hidden = true;
 
     private void IncrementCount()
     {
-        currentCount++;
-        hidden = currentCount switch
+        _currentCount++;
+        _hidden = _currentCount switch
         {
-            10 => true,
-            >= 12 => false,
-            _ => hidden
+            5 => false,
+            >= 6 => true,
+            _ => _hidden
             };
     }
+
+}
+
+@code {
+
+    private readonly List<BreadcrumbItem> _items = new()
+    {
+        new BreadcrumbItem("Home", "#"),
+        new BreadcrumbItem("Counter", "null", true)
+    };
+
 }
