--- a/MauiTest/Pages/FetchData.razor
+++ b/MauiTest/Pages/FetchData.razor
@@ -3,6 +3,8 @@
 @using MauiTest.Data
 @inject WeatherForecastService ForecastService
 
+<MudBreadcrumbs Items="_items"></MudBreadcrumbs>
+
 <h1>Weather forecast</h1>
 
 <p>This component demonstrates fetching data from a service.</p>
@@ -43,5 +45,15 @@ else
     {
         forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
     }
+}
+
+@code {
+
+    private readonly List<BreadcrumbItem> _items = new List<BreadcrumbItem>()
+    {
+        new BreadcrumbItem("Home", href: "#"),
+        new BreadcrumbItem("Fetch Data", href: "null", disabled: true)
+    };
+    
 }
 
