--- a/MauiTest/Shared/SurveyPrompt.razor
+++ b/MauiTest/Shared/SurveyPrompt.razor
@@ -1,13 +1,18 @@
-﻿<div class="alert alert-secondary mt-4">
-    <span class="oi oi-pencil me-2" aria-hidden="true"></span>
-    <strong>@Title</strong>
+﻿
+<MudAlert><MudText Typo="Typo.caption">@Title</MudText></MudAlert>
 
-    <span class="text-nowrap">
-        Please take our
-        <a target="_blank" class="font-weight-bold link-dark" href="https://go.microsoft.com/fwlink/?linkid=2188693">brief survey</a>
-    </span>
-    and tell us what you think.
-</div>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge">
+    <MudCard>
+        <MudText Typo="Typo.body1">This is the complete code of the invoke in Index.razor:</MudText>
+        <MudImage Fluid="true" ObjectPosition="ObjectPosition.Center" Src="images/indexrazor.png" 
+                  Elevation="15" Class="rounded-lg"></MudImage>
+    </MudCard>
+    <MudCard>
+        <MudText Typo="Typo.body1">This is the complete code of the component SurveyPrompt.razor:</MudText>
+        <MudImage Fluid="true" ObjectPosition="ObjectPosition.Center" Src="images/surveypromptrazor.png" 
+                  Elevation="15" Class="rounded-lg"></MudImage>
+    </MudCard>
+</MudContainer>
 
 @code {
     // Demonstrates how a parent component can supply parameters
