--- a/MauiTest/Shared/NavMenu.razor
+++ b/MauiTest/Shared/NavMenu.razor
@@ -1,6 +1,4 @@
-﻿
-
-<MudAppBar Color="Color.Transparent" Fixed="false" Elevation="2">
+﻿<MudAppBar Color="Color.Transparent" Fixed="false" Elevation="2">
     <MudNavLink Match="NavLinkMatch.All" Href="/">Home</MudNavLink>
     <MudNavLink Href="/Counter">Counter</MudNavLink>
     <MudNavLink Href="/FetchData">Fetch Data</MudNavLink>
